Add IP duplication check, history logging, and broken checkbox

--- a/public/index.html
+++ b/public/index.html
@@ -340,6 +340,9 @@
                     <label for="computerNotes">Особенности/Проблемы:</label>
                     <textarea id="computerNotes" rows="3"></textarea>
                 </div>
+                <div class="form-group">
+                    <label><input type="checkbox" id="computerBroken"> Неисправно</label>
+                </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
                     <button type="button" class="btn" onclick="closeModal('computerModal')">Отмена</button>
@@ -413,6 +416,9 @@
                     <label for="networkNotes">Примечания:</label>
                     <textarea id="networkNotes" rows="3"></textarea>
                 </div>
+                <div class="form-group">
+                    <label><input type="checkbox" id="networkBroken"> Неисправно</label>
+                </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
                     <button type="button" class="btn" onclick="closeModal('networkModal')">Отмена</button>
@@ -471,6 +477,9 @@
                 <div class="form-group">
                     <label for="otherNotes">Примечания:</label>
                     <textarea id="otherNotes" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label><input type="checkbox" id="otherBroken"> Неисправно</label>
                 </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
