--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
             <button class="tab-button" onclick="openTab(event, 'other')">🖨️ Другая техника</button>
             <button class="tab-button" onclick="openTab(event, 'assigned')">👤 Персональные устройства</button>
             <button class="tab-button" onclick="openTab(event, 'ipaddresses')">📊 IP адреса</button>
+            <button class="tab-button" onclick="openTab(event, 'history')">🕘 История</button>
         </div>
 
         <!-- Вкладка "Компьютеры" -->
@@ -247,6 +248,30 @@
                 </table>
             </div>
         </div>
+
+        <!-- Вкладка "История" -->
+        <div id="history" class="tab-content">
+            <div class="controls">
+                <h3>🕘 История изменений</h3>
+            </div>
+
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>№</th>
+                            <th>Таблица</th>
+                            <th>Инв.номер</th>
+                            <th>Название</th>
+                            <th>Действие</th>
+                            <th>Время</th>
+                        </tr>
+                    </thead>
+                    <tbody id="historyTable">
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
     <!-- Модальные окна -->
@@ -340,6 +365,14 @@
                     <label for="computerNotes">Особенности/Проблемы:</label>
                     <textarea id="computerNotes" rows="3"></textarea>
                 </div>
+                <div class="form-group">
+                    <label for="computerStatus">Состояние:</label>
+                    <select id="computerStatus">
+                        <option value="working">Исправен</option>
+                        <option value="issues">С проблемами</option>
+                        <option value="broken">Не исправен</option>
+                    </select>
+                </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
                     <button type="button" class="btn" onclick="closeModal('computerModal')">Отмена</button>
@@ -413,6 +446,14 @@
                     <label for="networkNotes">Примечания:</label>
                     <textarea id="networkNotes" rows="3"></textarea>
                 </div>
+                <div class="form-group">
+                    <label for="networkStatus">Состояние:</label>
+                    <select id="networkStatus">
+                        <option value="working">Исправен</option>
+                        <option value="issues">С проблемами</option>
+                        <option value="broken">Не исправен</option>
+                    </select>
+                </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
                     <button type="button" class="btn" onclick="closeModal('networkModal')">Отмена</button>
@@ -471,6 +512,14 @@
                 <div class="form-group">
                     <label for="otherNotes">Примечания:</label>
                     <textarea id="otherNotes" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="otherStatus">Состояние:</label>
+                    <select id="otherStatus">
+                        <option value="working">Исправен</option>
+                        <option value="issues">С проблемами</option>
+                        <option value="broken">Не исправен</option>
+                    </select>
                 </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
