Add Russian history actions and show details

--- a/public/index.html
+++ b/public/index.html
@@ -264,6 +264,7 @@
                             <th>Инв.номер</th>
                             <th>Название</th>
                             <th>Действие</th>
+                            <th>Детали</th>
                             <th>Время</th>
                         </tr>
                     </thead>
