--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
                     <option value="принтер">Принтеры</option>
                     <option value="проектор">Проекторы</option>
                     <option value="монитор">Мониторы</option>
-                    <option value="сканер">Сканеры</option>
+                    <option value="МФУ">МФУ</option>
                     <option value="другое">Другое</option>
                 </select>
                 <div class="file-operations">
@@ -481,7 +481,7 @@
                             <option value="принтер">Принтер</option>
                             <option value="проектор">Проектор</option>
                             <option value="монитор">Монитор</option>
-                            <option value="сканер">Сканер</option>
+                            <option value="МФУ">МФУ</option>
                             <option value="другое">Другое</option>
                         </select>
                     </div>
