Show assigned user for devices

--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,7 @@
                             <th>ОЗУ</th>
                             <th>IP-адрес</th>
                             <th>Имя ПК</th>
+                            <th>Назначено</th>
                             <th>Статус</th>
                             <th>Действия</th>
                         </tr>
@@ -157,6 +158,7 @@
                     <option value="принтер">Принтеры</option>
                     <option value="проектор">Проекторы</option>
                     <option value="монитор">Мониторы</option>
+                            <th>Назначено</th>
                     <option value="МФУ">МФУ</option>
                     <option value="другое">Другое</option>
                 </select>
