--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
             <button class="tab-button" onclick="openTab(event, 'other')">🖨️ Другая техника</button>
             <button class="tab-button" onclick="openTab(event, 'assigned')">👤 Персональные устройства</button>
             <button class="tab-button" onclick="openTab(event, 'ipaddresses')">📊 IP адреса</button>
+            <button class="tab-button" onclick="openTab(event, 'history')">🕘 История</button>
         </div>
 
         <!-- Вкладка "Компьютеры" -->
@@ -88,6 +89,7 @@
                             <th>ОЗУ</th>
                             <th>IP-адрес</th>
                             <th>Имя ПК</th>
+                            <th>Назначено</th>
                             <th>Статус</th>
                             <th>Действия</th>
                         </tr>
@@ -177,6 +179,7 @@
                             <th>Расположение</th>
                             <th>Ответственный</th>
                             <th>Инвентарный номер</th>
+                            <th>Назначено</th>
                             <th>Статус</th>
                             <th>Действия</th>
                         </tr>
@@ -227,6 +230,10 @@
             <div class="controls">
                 <h3>📊 Таблица IP адресов сети 192.168.100.0/24</h3>
                 <p>Управление IP адресами от 192.168.100.1 до 192.168.100.254</p>
+                <div class="file-operations">
+                    <button class="btn btn-warning" onclick="exportToExcel('ipaddresses')">📤 Экспорт Excel</button>
+                    <button class="btn" onclick="exportData('ipaddresses')">📊 Экспорт JSON</button>
+                </div>
             </div>
 
             <div class="table-container">
@@ -243,6 +250,35 @@
                         </tr>
                     </thead>
                     <tbody id="ipTable">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Вкладка "История" -->
+        <div id="history" class="tab-content">
+            <div class="controls">
+                <h3>🕘 История изменений</h3>
+                <div class="file-operations">
+                    <button class="btn btn-warning" onclick="exportToExcel('history')">📤 Экспорт Excel</button>
+                    <button class="btn" onclick="exportData('history')">📊 Экспорт JSON</button>
+                </div>
+            </div>
+
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>№</th>
+                            <th>Таблица</th>
+                            <th>Инв.номер</th>
+                            <th>Название</th>
+                            <th>Действие</th>
+                            <th>Детали</th>
+                            <th>Время</th>
+                        </tr>
+                    </thead>
+                    <tbody id="historyTable">
                     </tbody>
                 </table>
             </div>
@@ -340,6 +376,14 @@
                     <label for="computerNotes">Особенности/Проблемы:</label>
                     <textarea id="computerNotes" rows="3"></textarea>
                 </div>
+                <div class="form-group">
+                    <label for="computerStatus">Состояние:</label>
+                    <select id="computerStatus">
+                        <option value="working">Исправен</option>
+                        <option value="issues">С проблемами</option>
+                        <option value="broken">Не исправен</option>
+                    </select>
+                </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
                     <button type="button" class="btn" onclick="closeModal('computerModal')">Отмена</button>
@@ -413,6 +457,14 @@
                     <label for="networkNotes">Примечания:</label>
                     <textarea id="networkNotes" rows="3"></textarea>
                 </div>
+                <div class="form-group">
+                    <label for="networkStatus">Состояние:</label>
+                    <select id="networkStatus">
+                        <option value="working">Исправен</option>
+                        <option value="issues">С проблемами</option>
+                        <option value="broken">Не исправен</option>
+                    </select>
+                </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
                     <button type="button" class="btn" onclick="closeModal('networkModal')">Отмена</button>
@@ -471,6 +523,14 @@
                 <div class="form-group">
                     <label for="otherNotes">Примечания:</label>
                     <textarea id="otherNotes" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="otherStatus">Состояние:</label>
+                    <select id="otherStatus">
+                        <option value="working">Исправен</option>
+                        <option value="issues">С проблемами</option>
+                        <option value="broken">Не исправен</option>
+                    </select>
                 </div>
                 <div class="modal-buttons">
                     <button type="submit" class="btn btn-success">💾 Сохранить</button>
